# Ev3Car

./: .gitignore  README.md
Client/: CMakeLists.txt  Client.kdev4  general.h  guipad.cpp  guipad.h  header.h  logolego.h  main.cpp  mywindow.cpp  mywindow.h  orientationwidget.cpp  orientationwidget.h  radarwidget.cpp  radarwidget.h
Client/widget/: arc.cpp  arc.h  arrow.cpp  arrow.h  colormanager.cpp  colormanager.h  filledarc.cpp  filledarc.h  quad.cpp  quad.h
